fix main alignment

--- a/src/comp/App.css
+++ b/src/comp/App.css
@@ -25,12 +25,6 @@ a {
   color: #91D2FA
 }
 
-#container {
-  padding: 2rem 1rem;
-  box-sizing: border-box;
-  max-width: 800px;
-}
-
 /* shared */
 .column {
   display: flex;
@@ -58,14 +52,6 @@ header {
   height: auto;
 }
 
-/* center */
-#data {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: nowrap;
-}
 
 table {
   font-size: 1rem;
@@ -99,19 +85,3 @@ footer {
   border-top: 1px solid white;
 }
 
-@media (min-width: 800px) {
-  #container {
-    max-width: 1200px;
-  }
-
-  #data {
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
-  }
-
-  #data .column {
-    width: 500px;
-  }
-}
